Html title + prueba CSS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>Tarjeta QR</title>
+    <title>QR Card Challenge</title>
 
     <!--Fonts-->
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,6 +24,7 @@
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
     </main>
+
     <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://github.com/sergioinsa" target="_blank">Sergio Insaurralde</a>.
